# AutoPDEx

./: .gitignore  CLA.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: draft-pdf.yml  publish_to_pypi.yml  static.yml  tests.yml
autopdex/: __init__.py  assembler.py  dae.py  geometry.py  implicit_diff.py  implicit_diff_v2.py  mesher.py  models.py  plotter.py  seeder.py  solution_structures.py  solver.py  spaces.py  utility.py  variational_schemes.py
docs/: CNAME  conf.py  dae.rst  doc_generation.py  example_notebooks.rst  geometry.rst  index.rst  mesher.rst  models.rst  plotter.rst  seeder.rst  solution_structures.rst  solver.rst  spaces.rst  utility.rst  variational_schemes.rst
docs/_build/doctrees/: __init__.doctree  assembler.doctree  dae.doctree  environment.pickle  example_notebooks.doctree  examples.doctree  geometry.doctree  implicit_diff.doctree  index.doctree  mesher.doctree  models.doctree  plotter.doctree  seeder.doctree  settings.doctree  solution_structures.doctree  solver.doctree  spaces.doctree  (+2 more)
docs/notebooks/: dae_robertson.ipynb  mixed_problem.ipynb  ode_lotka_volterra.ipynb  pdae_navier_stokes_and_energy_balance.ipynb  quickstart.ipynb
examples/cooks_membrane/: external_user_elem_generation.nb  least_square_fem_rvachev_structure.py  moving_least_squares_least_square_fos.py  non-homogeneous_dirichlet_conditions.py  quadrilaterals_autopdex_and_acegen.py  quadrilaterals_p_refinement.py  triangles_h_refinement.py  uncertainty_estimation_hyperelastic.py
examples/heat_conduction/: maze_backward_euler.py  maze_forward_euler.py  space_time_different_solvers.py  space_time_fos_dirichlet_neumann_robin.py
examples/laplace/: fos_coupled_neumann_boundary.py  mls_rfm.py  pinn_rfm.py
examples/meshes/: navier_stokes_mesh_v.msh
examples/miscellaneous/: burgers_equation.py  geometry_examples.py  poisson.py  short_example.py  transport.py  wave_equation.py
examples/navier_stokes/: circle_in_channel.py  lid_driven_cavity.py
paper/: paper.bib  paper.md
tests/: test_backward_euler.py  test_dicts_as_dofs_user_potential.py  test_different_solvers.py  test_first_order_set.py  test_forward_euler.py  test_least_square_fem.py  test_least_square_var.py  test_mls_compiled.py  test_mls_direct.py  test_non-homogeneous_dirichlet_conditions.py  test_strong_galerkin.py  test_user_elem_impl_diff_and_adaptive_load_step.py  user_elem_impl_diff_and_adaptive_load_step_test.py
(+733 files in other folders)
