[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autopdex"
version = "1.0.3"
description = "An automized PDE solver for accelerators based on JAX"
readme = "README.md"
authors = [
    { name = "Tobias Bode", email = "tobiasbode.94@gmail.com" }
]
license = { text = "GNU Affero General Public License v3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"

dependencies = [
    "flax>=0.8.1",
    "jax>=0.4.26",
    "jaxlib>=0.4.26",
    "jaxopt>=0.8.3",
    "meshio>=5.3.5",
    "numpy>=1.26.4",
    "plotly>=5.15.0",
    "pygmsh>=7.1.17",
    "pyvista>=0.43.3",
    "scipy>=1.13.0",
    "scikit-optimize>=0.9.0",
    "sparsejac>=0.1.3",
    "pytest>=8.3.2"
]

[project.optional-dependencies]
dev = [
    "pyamg",
    "pypardiso",
    "petsc4py",
    "sparse_dot_mkl",
    "equinox"
]

[project.scripts]
autopdex-test = "autopdex:run_tests"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
